--- a/01-basics/02-VueCalculator/index.html
+++ b/01-basics/02-VueCalculator/index.html
@@ -32,23 +32,24 @@
   <div id="app" class="container">
     <div class="row">
       <div class="col">
-        <input v-model.number='operand1' type="number" />
+        <input v-model.number='preOperand' type="number" />
       </div>
 
-      <div class="col" style="display: flex; flex-direction: column; font-family: emoji">
-        <label><input type="radio" value="sum" /> ➕</label>
-        <label><input type="radio" value="subtract" /> ➖</label>
-        <label><input type="radio" value="multiply" /> ✖</label>
-        <label><input type="radio" value="divide" /> ➗</label>
+      <div @click="getOperation($event.target.value)" class="col"
+        style="display: flex; flex-direction: column; font-family: emoji">
+        <label><input type="radio" value="sum" name="operator" /> ➕</label>
+        <label><input type="radio" value="subtract" name="operator" /> ➖</label>
+        <label><input type="radio" value="multiply" name="operator" /> ✖</label>
+        <label><input type="radio" value="divide" name="operator" /> ➗</label>
       </div>
 
       <div class="col">
-        <input v-model.number='operand2' type="number" />
+        <input v-model.number='postOperand' type="number" />
       </div>
 
       <div class="col">=</div>
 
-      <output class="col">0</output>
+      <output class="col">{{result}}</output>
     </div>
   </div>
 
