--- a/01-basics/01-CounterButtonApp/index.html
+++ b/01-basics/01-CounterButtonApp/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="app">
-    <button type="button" @click='setCountAdd'>{{ getCount }}</button>
+    <button type="button" @click='increment'>{{ сount }}</button>
   </div>
 
   <script type="module" src="./script.js"></script>
