--- a/01-basics/01-CounterButtonApp/index.html
+++ b/01-basics/01-CounterButtonApp/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CounterButtonApp</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>CounterButtonApp</title>
-</head>
+  <body>
+    <div id="app">
+      <button type="button" @click="increment">{{ сount }}</button>
+    </div>
 
-<body>
-  <div id="app">
-    <button type="button" @click='increment'>{{ сount }}</button>
-  </div>
-
-  <script type="module" src="./script.js"></script>
-</body>
-
+    <script type="module" src="./script.js"></script>
+  </body>
 </html>
