--- a/01-basics/04-MeetupTitle/index.html
+++ b/01-basics/04-MeetupTitle/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <title>MeetupTitle</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>MeetupTitle</title>
-</head>
+  <body>
+    <div id="app">
+      <div>
+        <label v-for="el in 5" :key="el"
+          ><input type="radio" :value="el" @change="dataGet(el)" name="radioButton" /> {{ el }}</label
+        >
+        <hr />
 
-<body>
-  <div id="app">
-    <div>
-      <label><input type="radio" value="1" @change="inputChecked($event.target.value)" /> 1</label>
-      <label><input type="radio" value="2" @change="inputChecked($event.target.value)" /> 2</label>
-      <label><input type="radio" value="3" @change="inputChecked($event.target.value)" /> 3</label>
-      <label><input type="radio" value="4" @change="inputChecked($event.target.value)" /> 4</label>
-      <label><input type="radio" value="5" @change="inputChecked($event.target.value)" /> 5</label>
-
-      <hr />
-
-      <h3>MEETUP_TITLE</h3>
+        <h3 v-if="meetUps?.title">{{ meetUps.title }}</h3>
+      </div>
     </div>
-  </div>
 
-  <script type="module" src="script.js"></script>
-</body>
-
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
