--- a/01-basics/04-MeetupTitle/index.html
+++ b/01-basics/04-MeetupTitle/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <title>MeetupTitle</title>
-  </head>
 
-  <body>
-    <div id="app">
-      <div>
-        <label v-for="el in 5" :key="el"
-          ><input type="radio" :value="el" @change="dataGet(el)" name="radioButton" /> {{ el }}</label
-        >
-        <hr />
+<head>
+  <meta charset="UTF-8" />
+  <title>MeetupTitle</title>
+</head>
 
-        <h3 v-if="meetUps?.title">{{ meetUps.title }}</h3>
-      </div>
+<body>
+  <div id="app">
+    <div>
+      <label v-for="el in 5" :key="el">
+        <input type="radio" :value="el" name="radioButton" v-model="meetup" /> {{ el
+        }}
+      </label>
+      <hr />
+
+      <h3>{{ meetup?.title }}</h3>
     </div>
+  </div>
 
-    <script type="module" src="script.js"></script>
-  </body>
+  <script type="module" src="script.js"></script>
+</body>
+
 </html>
